src/snapshots/funky__tests__arithmetic.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I64,
                    },
                ],
                code: [
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            1,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            2,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Num(
                        OP_I64_CONST(
                            32,
                        ),
                    ),
                    Num(
                        OP_I64_SHL,
                    ),
                    Num(
                        OP_I64_OR,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            3,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            4,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Num(
                        OP_I64_CONST(
                            32,
                        ),
                    ),
                    Num(
                        OP_I64_SHL,
                    ),
                    Num(
                        OP_I64_OR,
                    ),
                    Num(
                        OP_I64_SUB,
                    ),
                    Var(
                        OP_LOCAL_TEE(
                            5,
                        ),
                    ),
                    Mem(
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            5,
                        ),
                    ),
                    Num(
                        OP_I64_CONST(
                            32,
                        ),
                    ),
                    Num(
                        OP_I64_SHR_U,
                    ),
                    Mem(
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 4,
                            },
                        ),
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I64,
                    },
                ],
                code: [
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            3,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            4,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Num(
                        OP_I64_CONST(
                            32,
                        ),
                    ),
                    Num(
                        OP_I64_SHL,
                    ),
                    Num(
                        OP_I64_OR,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            1,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            2,
                        ),
                    ),
                    Num(
                        OP_I64_EXTEND_I32_U,
                    ),
                    Num(
                        OP_I64_CONST(
                            32,
                        ),
                    ),
                    Num(
                        OP_I64_SHL,
                    ),
                    Num(
                        OP_I64_OR,
                    ),
                    Num(
                        OP_I64_MUL,
                    ),
                    Var(
                        OP_LOCAL_TEE(
                            5,
                        ),
                    ),
                    Mem(
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            5,
                        ),
                    ),
                    Num(
                        OP_I64_CONST(
                            32,
                        ),
                    ),
                    Num(
                        OP_I64_SHR_U,
                    ),
                    Mem(
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 4,
                            },
                        ),
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            1,
                        ),
                    ),
                    Num(
                        OP_F64_DIV,
                    ),
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                    I32,
                    I32,
                    I32,
                ],
                return_types: [],
            },
            FunctionSignature {
                param_types: [
                    F64,
                    F64,
                ],
                return_types: [
                    F64,
                ],
            },
        ],
        funcaddrs: [
            0,
            1,
            2,
        ],
        tableaddrs: [],
        memaddrs: [
            0,
        ],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "sub_i64",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "mult_i64",
                value: Function {
                    ty: 1,
                },
            },
            ExportInstance {
                name: "div",
                value: Function {
                    ty: 2,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                        I32,
                        I32,
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I64,
                        },
                    ],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                1,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                2,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Num(
                            OP_I64_CONST(
                                32,
                            ),
                        ),
                        Num(
                            OP_I64_SHL,
                        ),
                        Num(
                            OP_I64_OR,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                3,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                4,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Num(
                            OP_I64_CONST(
                                32,
                            ),
                        ),
                        Num(
                            OP_I64_SHL,
                        ),
                        Num(
                            OP_I64_OR,
                        ),
                        Num(
                            OP_I64_SUB,
                        ),
                        Var(
                            OP_LOCAL_TEE(
                                5,
                            ),
                        ),
                        Mem(
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                5,
                            ),
                        ),
                        Num(
                            OP_I64_CONST(
                                32,
                            ),
                        ),
                        Num(
                            OP_I64_SHR_U,
                        ),
                        Mem(
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 4,
                                },
                            ),
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                        I32,
                        I32,
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I64,
                        },
                    ],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                3,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                4,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Num(
                            OP_I64_CONST(
                                32,
                            ),
                        ),
                        Num(
                            OP_I64_SHL,
                        ),
                        Num(
                            OP_I64_OR,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                1,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                2,
                            ),
                        ),
                        Num(
                            OP_I64_EXTEND_I32_U,
                        ),
                        Num(
                            OP_I64_CONST(
                                32,
                            ),
                        ),
                        Num(
                            OP_I64_SHL,
                        ),
                        Num(
                            OP_I64_OR,
                        ),
                        Num(
                            OP_I64_MUL,
                        ),
                        Var(
                            OP_LOCAL_TEE(
                                5,
                            ),
                        ),
                        Mem(
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                5,
                            ),
                        ),
                        Num(
                            OP_I64_CONST(
                                32,
                            ),
                        ),
                        Num(
                            OP_I64_SHR_U,
                        ),
                        Mem(
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 4,
                                },
                            ),
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        F64,
                        F64,
                    ],
                    return_types: [
                        F64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                1,
                            ),
                        ),
                        Num(
                            OP_F64_DIV,
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
}
