src/snapshots/funky__tests__as_loop_br_if.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    Ctrl(
                        OP_BLOCK(
                            Empty,
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    Ctrl(
                                        OP_LOOP(
                                            Empty,
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    Var(
                                                        OP_LOCAL_GET(
                                                            0,
                                                        ),
                                                    ),
                                                    Ctrl(
                                                        OP_BR_IF(
                                                            1,
                                                        ),
                                                    ),
                                                    Num(
                                                        OP_I32_CONST(
                                                            2,
                                                        ),
                                                    ),
                                                    Ctrl(
                                                        OP_RETURN,
                                                    ),
                                                ],
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ),
                    Num(
                        OP_I32_CONST(
                            3,
                        ),
                    ),
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            0,
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "as-loop-first",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Ctrl(
                            OP_BLOCK(
                                Empty,
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        Ctrl(
                                            OP_LOOP(
                                                Empty,
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        Var(
                                                            OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        ),
                                                        Ctrl(
                                                            OP_BR_IF(
                                                                1,
                                                            ),
                                                        ),
                                                        Num(
                                                            OP_I32_CONST(
                                                                2,
                                                            ),
                                                        ),
                                                        Ctrl(
                                                            OP_RETURN,
                                                        ),
                                                    ],
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            ),
                        ),
                        Num(
                            OP_I32_CONST(
                                3,
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
