src/snapshots/funky__tests__block_add_i32.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [],
                    code: [
                        Ctrl(
                            OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                [
                                    Var(
                                        OP_LOCAL_GET(
                                            0,
                                        ),
                                    ),
                                    Var(
                                        OP_LOCAL_GET(
                                            1,
                                        ),
                                    ),
                                    Num(
                                        OP_I32_ADD,
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
            ],
            tableaddrs: [],
            memaddrs: [],
            globaladdrs: [],
            exports: [],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                module: (Weak),
                code: FunctionBody {
                    locals: [],
                    code: [
                        Ctrl(
                            OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                [
                                    Var(
                                        OP_LOCAL_GET(
                                            0,
                                        ),
                                    ),
                                    Var(
                                        OP_LOCAL_GET(
                                            1,
                                        ),
                                    ),
                                    Num(
                                        OP_I32_ADD,
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
